# django-models

./: README.md  db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: models.py  tests.py
snacks/migrations/: 0001_initial.py
templates/: base.css  base.html  snack_detail.html  snack_list.html
